tests/fixtures/negative/057_regex_invalid_flag.js
// ECMA-262 §22.2.1 — valid RegExp flags are d, g, i, m, s, u, v, y.
// Any other letter at the flag position is a SyntaxError.
const r = /abc/xyz;
